--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pdfjs-dist": "^4.0.269",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-pdf": "^7.5.1",
+    "react-pdf-viewer": "^0.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
