--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pdfjs-dist": "^4.0.269",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-pdf": "^7.5.1",
     "react-pdf-viewer": "^0.1.0"
   },
